--- a/src/functionBased/index.scss
+++ b/src/functionBased/index.scss
@@ -66,4 +66,103 @@ body {
       border: none;
     }
   }
+
+  /* sidebar Nav */
+
+  .navBar {
+    position: relative;
+  }
+
+  .navBar button {
+    position: fixed;
+    left: 40px;
+    top: 40px;
+    z-index: 10;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+  }
+
+  .menuNav {
+    overflow-y: scroll;
+    list-style: none;
+    position: fixed;
+    top: 0;
+    background: #0c2c4c;
+    left: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 0;
+    overflow: hidden;
+    max-width: 290px;
+    z-index: 9;
+  }
+
+  .menuNav.showMenu {
+    width: 100%;
+  }
+
+  a {
+    display: block;
+    padding: 10px 40px;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .menuNav li:first-child {
+    margin-top: 7rem;
+  }
+
+  /* about page */
+
+  .about__content {
+    padding: 8rem 40px;
+    display: flex;
+  }
+
+  .about__list {
+    list-style: none;
+    flex: 2;
+    margin-right: 15px;
+  }
+
+  .about__list a {
+    color: #9f9f9f;
+    text-transform: capitalize;
+    padding: 20px 0;
+    font-weight: 600;
+  }
+
+  .about__list a:hover {
+    color: #000;
+  }
+
+  .content {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+  }
+
+  .main__content {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main__content h1 {
+    margin-bottom: 15px;
+    line-height: 30px;
+    font-size: 40px;
+  }
+
+  .main__content p {
+    line-height: 35px;
+    font-size: 20px;
+    text-align: justify;
+  }
 }
